# asd

./: .gitignore  LIDAR_SETUP_GUIDE.md  LIDAR_STATUS.md  MyModel.world  NAVIGATION_QUICKSTART.md  README.md  ROVER_NAVIGATION_SUMMARY.md  ROVER_README.md  bridge_gazebo_ros.sh  convert_glb_gazebo.py  extract_textures.py  launch_model.sh  run_rover.sh  verify_rover.sh
CustomRover/: model.sdf
MarsRover/: model.config  model.sdf
MyModel/: Untitled.mtl  model.config  model.sdf
ros2_ws/: build_rover.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/mars_rover_navigation/lib/mars_rover_navigation/: object_detector
ros2_ws/install/mars_rover_navigation/share/mars_rover_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/mars_rover_navigation/share/mars_rover_navigation/cmake/: mars_rover_navigationConfig-version.cmake  mars_rover_navigationConfig.cmake
ros2_ws/install/mars_rover_navigation/share/mars_rover_navigation/config/: nav2_params.yaml
ros2_ws/install/mars_rover_navigation/share/mars_rover_navigation/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/log/: latest_build
ros2_ws/src/mars_rover_navigation/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/mars_rover_navigation/config/: nav2_params.yaml
ros2_ws/src/mars_rover_navigation/launch/: exploration_system.launch.py  rover_navigation.launch.py  test_lidar.launch.py
ros2_ws/src/mars_rover_navigation/scripts/: habitat_finder.py  navigation_controller.py  object_detector.py  path_recorder.py
ros2_ws/src/mars_rover_navigation/src/: object_detector.cpp
(+4 files in other folders)
